# codimd-extras

./: .gitignore  pyproject.toml
app/: __init__.py  database.py  main.py  models.py
static/: index.html
templates/: notes.html.jinja
